Rough in user data tracking

--- a/client-side/index.html
+++ b/client-side/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <header class="header"> </header>
     <div class="page__container" id="app">
-      <div class="form__container">
+      <!-- <div class="form__container">
         <input type="text" class="add-item__name" placeholder="Enter item">
         <button class="add-item__submit">Submit</button>
         <section class="itemList">
@@ -27,6 +27,11 @@
       <section class="popularItems">
         <h2>Here are our most popular items...</h2>
       </section>
+    </div> -->
+    <div class="loginForm">
+      <h2>Sign In</h2>
+      <input class="loginName" type="text" placeholder="username">
+      <button class="loginSubmit">Submit</button>
     </div>
     <footer class="footer"></footer>
   </div>
